fixes new dark mode

--- a/assets/css/_sass/_base.scss
+++ b/assets/css/_sass/_base.scss
@@ -7,7 +7,7 @@ p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0;
-  background-color: $background-color;
+  color: $text-color;
 }
 
 /*
@@ -42,6 +42,7 @@ h4, h5, h6 {
 /* Body */
 body {
   font-family: $base-font-family;
+  background-color: $background-color;
 }
 body img {
     align: middle;
