--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -13,17 +13,18 @@
 }
 .featured-posts h2 {
   bottom: 0;
-  margin: 15px 35px 15px;
+  margin: 15px 40px 30px;
   position: absolute;
 }
 .featured-posts h2 span {
    display: inline-block;
+   border-radius: 7px;
    color: white;
    font: bold 24px/45px Helvetica, Sans-Serif;
    letter-spacing: -1px;
    background: rgb(0, 0, 0); /* fallback color */
-   background: rgba(0, 0, 0, 0.7);
-   padding: 10px;
+   background: rgba(0, 0, 0, 0.3);
+   padding: 3px 10px 3px 10px;
 }
 .featured-posts span a {
   color: white;
